fix login modal on mobile

--- a/app/assets/stylesheets/layout/_modal-login.scss
+++ b/app/assets/stylesheets/layout/_modal-login.scss
@@ -15,11 +15,12 @@
 
   &__image {
     border-radius: 6px;
-    max-width: 250px;
+    max-width: 170px;
     margin: 0 auto;
   }
 
   &__title {
+    font-size: 21px;
     text-align: center;
     margin: 10px 0 25px;
   }
